tests/machine/x/hs/group_by_conditional_sum.error

/workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:127:1: error:
    Multiple declarations of ‘items’
    Declared at: /workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:37:37
                 /workspace/mochi/tests/machine/x/hs/group_by_conditional_sum.hs:127:1
    |
127 | items = [Map.fromList [("cat", VString ("a")), ("val", VInt (10)), ("flag", VBool (True))], Map.fromList [("cat", VString ("a")), ("val", VInt (5)), ("flag", VBool (False))], Map.fromList [("cat", VString ("b")), ("val", VInt (20)), ("flag", VBool (True))]]
    | ^^^^^
